# nmg-soft

./: README.md
callcenter/: Makefile  Makefile.am  Makefile.in  arm.mk  callcenter.c  cc.sh  ccenter.c  config.h  config.status  configure  configure.in  ioacc  ioacc.c  low_acc  low_acc.c  lowacc  message  message.c  shm  sr.c  testshm.c
callcenter/.deps/: callcenter.Po
callcenter/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
include/: chassis.h  dbutil.h  ddm.h  infoset.h  io.h  ioutil.c  olp.h  otu.h  public.h  snmpconf.h  sysinfo.h  typedefs.h  unit.h  visdb.h  visipc.h
infoset/: infoset.c
io/: io_access.c  ioacc  ioapp.c  ioset  ioutil.c  opt  opt.c
lib/: Makefile  Makefile.am  Makefile.in  arm.mk  config.status  configure  configure.in  linux.mk
lib/.deps/: almutil.Po  chassis.Po  dbutil.Po  ddm.Po  infoset.Po  iniconf.Po  ioutil.Po  logutil.Po  mbusshm.Po  olp.Po  otu.Po  shmutil.Po  shutils.Po  sigmsg.Po  snmputil.Po  sysinfo.Po  unit.Po  visstr.Po
lib/autom4te.cache/: output.1  traces.0  traces.1
libtemp/: lib.tar
sqlite/: Makefile  config.status  libtool  sqlite3.pc
sqlite/.deps/: sqlite3-sqlite3.Po
sys/sysapp/: watchdog.c  watchdogd
sys/sysutil/: cpumem.c  logutil.c  snmputil.c  sysinfo.c
unit/chassis/: chassis.c
unit/ddm/: ddm.c
unit/olp/: olp.c
unit/otu/: otu.c
unit/unitutil/: unit.c
unit/uset/: unitset.c
utils/: iniconf.c  shutils.c
visdb/dbapp/: arm.mk  config.status  dbapp  dbapp.c  dbman  dbman.c
visdb/dbutil/: almutil.c  (+1 more)
visipc/: shm_main.c  sigmsg.c  visshm.c
visstr/: visstr.c
(+14 files in other folders)
